# sensor_communication

./: LICENSE  README.md
controller_node/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
controller_node/install/sensor_communication/lib/sensor_communication/: sensor_communication_node
controller_node/install/sensor_communication/share/sensor_communication/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
controller_node/src/sensor_communication/: setup.cfg  setup.py
controller_node/src/sensor_communication/sensor_communication/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
controller_node/src/sensor_communication/srv/: StartSensor.srv
node_mcu_code/final_gyro/: final_gyro.ino
